z-index fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@layer {
+  td, p, th {
+    @apply text-sm md:text-[16px];
+  }
+}
